--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,16 @@
 /Taller08/nbproject/private/
 /Taller08/build/
+/TrabajoDia20/nbproject/private/
+/TrabajoDia20/build/
+/OperacionesMatematicas/nbproject/private/
+/OperacionesMatematicas/build/
+/SumaRestaMultDiv/nbproject/private/
+/SumaRestaMultDiv/build/
+/Taller_11/nbproject/private/
+/Taller_11/build/
+/CalculadoraDeMatrices/nbproject/private/
+/CalculadoraDeMatrices/build/
+/clases_10_01/nbproject/private/
+/clases_10_01/build/
+/Proyecto_2B/nbproject/private/
+/Proyecto_2B/build/
